[package]
name = "arb-gnucash-importer"
version = "1.0.0"
authors = ["Ryan Bruno <ryanbruno506@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
log4rs = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ethers = "2"
toml = "0.8"
csv = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
